// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeStat test: Before anything 1`] = `
Object {
  "previousQuery": Object {},
  "statCollection": "stats",
  "stats": Object {},
}
`;

exports[`makeStat test: after add summ 1`] = `
Object {
  "previousQuery": Object {},
  "statCollection": "stats",
  "stats": Object {
    "sum.pathSum": 1890,
    "sum.simpleSum": 10,
  },
}
`;

exports[`makeStat test: after reset 1`] = `
Object {
  "previousQuery": Object {},
  "statCollection": "stats",
  "stats": Object {},
}
`;

exports[`makeStat test: after server add summ 1`] = `
Object {
  "previousQuery": Object {},
  "statCollection": "stats",
  "stats": Object {
    "sum.pathSum": 1890,
    "sum.simpleSum": 10,
  },
}
`;

exports[`makeStat test: after server simple sum 1`] = `
Object {
  "previousQuery": Object {},
  "statCollection": "stats",
  "stats": Object {
    "sum.simpleSum": 10,
  },
}
`;

exports[`makeStat test: after simple sum 1`] = `
Object {
  "previousQuery": Object {},
  "statCollection": "stats",
  "stats": Object {
    "sum.simpleSum": 10,
  },
}
`;
